--- a/assets/css/apiajax.css
+++ b/assets/css/apiajax.css
@@ -6,4 +6,13 @@
   height: 324px;
   width: 576px;
   position: relative;
-  font-family: 'Arvo'; }
+  font-family: 'Arvo';
+  z-index: 1; }
+
+img {
+  position: fixed;
+  top: -10;
+  left: -10;
+  width: 75px;
+  height: 75px;
+  z-index: 2; }
