--- a/assets/sass/apiajax.scss
+++ b/assets/sass/apiajax.scss
@@ -8,4 +8,14 @@
     width: 576px;
     position:relative;
     font-family: 'Arvo';
+    z-index: 1;
+}
+
+img {
+    position: fixed;
+    top: -10;
+    left: -10;
+    width: 75px;
+    height: 75px;
+    z-index: 2;
 }
